@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-31T01:00:40Z",
+  "timestamp" : "2022-05-31T08:18:15Z",
   "count_outdated" : 305,
   "uniques_outdated" : 158,
   "count" : 331,
-  "uniques" : 176,
+  "uniques" : 177,
   "clones" : [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
@@ -51,6 +51,13 @@
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
