@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
